--- a/style.css
+++ b/style.css
@@ -1,24 +1,79 @@
-body, h1, h2, p, ul, li{
+body{
+    font-family: Arial, Helvetica, sans-serif;
     margin: 0;
     padding: 0;
 }
 
-body{
-    font-family: Arial, Helvetica, sans-serif;
-    background-color: #1a6269;
-    color: rgb(122, 103, 186);
+h1{
+    margin: 10px 0px;
+    padding: 0;
 }
 
 header{
-    background-color: 333;
+    background-color: aqua;
+    padding: 10px 20px;
+    text-align: center;
+
+}
+
+nav{
+    background-color: #444;
+    color: #ffffff;
+    padding: 10px;
+    text-align: center;
+}
+
+nav a{
+    margin: 0 20px;
+    color: #ffffff;
+    text-decoration: none;
+}
+
+nav a:hover{
+    background-color: inherit;
+    color: beige;
+    text-decoration: underline;
+}
+
+main{
+}
+
+.about{
+    display: flex;
+    align-items: center;
+}
+
+.pic{
+    flex: 1;
+    /* background-color: blanchedalmond; */
+    max-width: 50%;
+    box-sizing: border-box;
+    text-align: right;
+    margin-left: 300px;
+}
+
+.pic img{
+    height: auto;
+    border-radius: 50%;
+}
+
+.about_text{
+    flex: 2;
+    height: auto;
+}
+
+footer{
+    height: 150px;
+    background-color: dimgray;
+    color: antiquewhite;
     padding: 20px;
+    text-align: center;
+    position: relative;
+    bottom: 0;
 }
 
-h1{
-    color: #1bb715;
-    margin-bottom: 20px;
-}
-
-nav ul{
-    list-style: none;
+.foot_col{
+    width: 31%;
+    float: left;
+    margin: 15px 10px;
 }
