--- a/style.css
+++ b/style.css
@@ -11,7 +11,7 @@ h1{
 }
 
 header{
-    padding: 1% 2%;
+    padding: 1% 2% 0 2%;
     display: flex;
     color: #7c6a0a;
 }
@@ -32,8 +32,11 @@ nav{
 nav a{
     margin-left: 5%;
     margin-right: 5%;
-    text-decoration: none;
     color: inherit;
+}
+
+a{
+    text-decoration: none;
 }
 
 nav a:hover{
@@ -47,23 +50,40 @@ main{
 
 .about{
     display: flex;
+    flex-wrap: wrap;
     align-items: center;
 }
 
 .pic{
     flex: 1;
+    flex-wrap: wrap;
+    justify-content: center;
 }
 
 .pic img{
-    height: 500px;
-    width: 500px;;
     border-radius: 100%;
+    max-width: 100%;
 }
 
 .about_text{
     flex: 1;
     height: auto;
     margin-left: 5%;
+    margin-right: 5%;
+}
+
+button{
+    display: inline;
+    border-radius: 100%;
+    width: 100px;
+    height: 100px;
+    background-color: #DCE0D9;
+}
+
+button:hover{
+    border: dotted;
+    border-color: #575C55;
+    background-color: #ffffff;
 }
 
 hr{
@@ -71,6 +91,8 @@ hr{
     text-align: center;
     color: #DBC2CF;
     background-color: #DBC2CF;
+    margin-bottom: 0;
+    margin-top: auto;
 }
 
 footer{
