--- a/style.css
+++ b/style.css
@@ -2,6 +2,7 @@ body{
     margin: 0;
     padding: 0;
     background-color: #f0efeb;
+    text-align: center;
 }
 
 h1{
@@ -11,8 +12,9 @@ h1{
 }
 
 header{
-    padding: 1% 2% 0 2%;
+    padding: 0 2% 0 2%;
     display: flex;
+    align-items: center;
     color: #7c6a0a;
 }
 
@@ -20,23 +22,17 @@ header p{
     flex: 1;
     padding-left: 3%;
     font-size: larger;
+    color: inherit;
+    text-align: left;
 }
 
 nav{
     flex: 2;
-    text-align: right;
-    height: fit-content;
-    padding: 2% 2%;
-}
-
-nav a{
-    margin-left: 5%;
-    margin-right: 5%;
-    color: inherit;
 }
 
 a{
     text-decoration: none;
+    color: inherit;
 }
 
 nav a:hover{
@@ -44,46 +40,86 @@ nav a:hover{
     color: #721121;
 }
 
+.navlinks{
+    display: flex;
+}
+
+.navlinks ul{
+    list-style-type: none;
+    display: flex;
+    width: 100%;
+    justify-content: flex-end;
+    gap: 4em;
+}
+
+nav li{
+    white-space: nowrap;
+}
+
+.toggle-btn{
+    position: absolute;
+    top: 1.2rem;
+    right: 1.2rem;
+    display: none;
+    flex-direction: column;
+    justify-content: space-between;
+    width: 30px;
+    height: 21px;
+    cursor: pointer;
+}
+
+.toggle-btn .bar{
+    height: 3px;
+    width: 100%;
+    border-radius: 10px;
+    background-color: #7c6a0a;
+}
+
 main{
     padding: 2%;
 }
 
-.about{
+.intro{
     display: flex;
     flex-wrap: wrap;
     align-items: center;
+    justify-content: space-around;
+    gap: 2rem;
+}
+
+.intro h3{
+    color: #d6ccc2;
 }
 
 .pic{
-    flex: 1;
-    flex-wrap: wrap;
+    flex: 2;
     justify-content: center;
 }
 
 .pic img{
     border-radius: 100%;
-    max-width: 100%;
+    max-width: 80%;
+    min-width: 200px;
 }
 
 .about_text{
-    flex: 1;
+    flex: 3;
     height: auto;
-    margin-left: 5%;
-    margin-right: 5%;
+    min-width: 250px;
+    text-align: left;
 }
 
 button{
-    display: inline;
-    border-radius: 100%;
-    width: 100px;
-    height: 100px;
-    background-color: #DCE0D9;
+    padding: 1.2rem;
+    border: 3px solid #776d62;
+    border-radius: 10px;
+    
 }
 
 button:hover{
-    border: dotted;
     border-color: #575C55;
-    background-color: #ffffff;
+    background-color: #ffffef;
+    cursor: pointer;
 }
 
 hr{
@@ -96,18 +132,74 @@ hr{
 }
 
 footer{
-    display: block;
     text-align: center;
 }
 
+.foot_container{
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+}
+
 .foot_col{
-    width: 32%;
-    float: left;
-    margin: 1% 0.5%;
+    flex: 1;
+    gap: 2rem;
+    min-width: fit-content;
+    max-width: 33%;
 }
 
 .social_logos{
     height: 30px;
     width: 30px;
     margin: 0.5%;
+}
+
+/* section .sidebar{
+    
+}
+.my_details{
+    pass
+}
+.about_content{
+    pass
+} */
+
+
+@media (max-width: 510px) {
+    .toggle-btn{
+        display: flex;
+    }
+
+    header{
+        flex-direction: column;
+        align-items: flex-start;
+    }
+
+    nav{
+        padding: 0;
+        width: 100%;
+        flex-direction: column;
+        align-items: flex-end;
+    }
+
+    .navlinks{
+        display: none;
+        flex-direction: column;
+    }
+
+    .navlinks ul{
+        flex-direction: column;
+        gap: 1vh;
+        padding: 0;
+        margin: 0;
+    }
+
+    .navlinks.active{
+        display: flex;
+    }
+
+    .foot_container{
+        flex-direction: column;
+        align-items: center;
+    }
 }
