--- a/style.css
+++ b/style.css
@@ -3,6 +3,7 @@ body{
     padding: 0;
     background-color: #f0efeb;
     text-align: center;
+    font-size: 18px;
 }
 
 h1{
@@ -154,6 +155,19 @@ footer{
     margin: 0.5%;
 }
 
+/* about */
+
+#about_main{
+    width: 75%;
+    float: right;
+}
+aside{
+    width: 18%;
+    max-width: 150px;
+    min-width: 100px;
+    float: left;
+    background-color: #776d62;
+}
 /* section .sidebar{
     
 }
