--- a/style.css
+++ b/style.css
@@ -46,6 +46,7 @@ nav a:hover{
 
 .navlinks{
     display: flex;
+    transition: all 2s ease-in-out;
 }
 
 .navlinks ul{
@@ -114,6 +115,7 @@ main{
 }
 
 button {
+    margin-bottom: 5px;
     padding: 1rem 2rem; /* Balanced padding */
     border: 2px solid #b8a59a;
     background-color: #f7f4ef; /* Light cream background to match page */
@@ -163,6 +165,68 @@ footer{
 }
 
 /* about */
+#about_main {
+    padding: 20px;
+    max-width: 800px;
+    margin: 0 auto;
+}
+
+.download-cv {
+    text-align: right;
+    margin-bottom: 20px;
+}
+
+.download-cv button {
+    background-color: #4A6572 ;
+    color: white;
+    border: none;
+    padding: 10px 20px;
+    border-radius: 5px;
+    cursor: pointer;
+    font-size: 16px;
+    transition: background-color 0.3s ease;
+}
+
+.download-cv button:hover {
+    background-color: #3A5562;
+}
+
+.card {
+    background-color: #fff;
+    margin-bottom: 20px;
+    padding: 20px;
+    border-radius: 8px;
+    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+}
+
+.card h2 {
+    font-size: 24px;
+    margin-bottom: 15px;
+    border-bottom: 1px solid #ccc;
+    padding-bottom: 5px;
+    color: #4A6572;
+}
+
+.details {
+    display: flex;
+    gap: 20px;
+    margin-bottom: 20px;
+}
+
+.details div {
+    flex: 1;
+}
+
+.details h3 {
+    margin: 0;
+    font-size: 18px;
+    font-weight: bold;
+    color: #333;
+}
+
+.details p:last-child {
+    margin: 5px 0 0;
+}
 
 /*projects*/
 /* General Section Styling */
@@ -200,12 +264,6 @@ footer{
   .project-card:hover {
     transform: translateY(-5px);
     box-shadow: 0 6px 12px rgba(0, 0, 0, 0.15);
-  }
-  
-  .project-card img {
-    width: 100%;
-    height: 180px;
-    object-fit: cover;
   }
   
   .project-card h3 {
@@ -319,7 +377,7 @@ footer{
 
 /*-----------------------------------------------------------------------------------------*/
 
-@media (max-width: 510px) {
+@media (max-width: 610px) {
     .toggle-btn{
         display: flex;
     }
@@ -358,12 +416,15 @@ footer{
     }
     .contact-container {
         flex-direction: column; /* Stack elements vertically */
-        max-width: 90%; /* Use more screen width */
+        min-width: fit-content;
+        align-items: center;
     }
 
     .contact-left,
     .contact-right {
         flex: unset; /* Reset flex growth */
-        width: 100%; /* Full width for both sections */
+        width: 80%; /* Full width for both sections */
+        align-items: center;
+        justify-content: center;
     }
 }
